@@ -8,7 +8,7 @@ LIB_VERSION_NUM=0.0.0
 #
 # The targets
 #
-bin_PROGRAMS    = gnome_segv gnome-remote-bootstrap
+bin_PROGRAMS    = gnome_segv
 lib_LTLIBRARIES = libgnomeui-2.la
 
 #
@@ -104,8 +104,6 @@ libinclude_HEADERS = \
 libgnomeuiinclude_HEADERS =		\
 	$(gnome_headers)		\
 	gnometypebuiltins.h
-
-gnome_remote_bootstrap_SOURCES=gnome-remote-bootstrap.c
 
 # all autogenerated files need to be generated in the srcdir,
 # so old versions get remade and are not confused with newer
